--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fetch-data",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "test.js",
   "type": "module",
   "scripts": {
     "start": "node app.js",
